<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fragment.FragmentTeman">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbAddFriends"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_teman"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/isi_nama"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etNIM"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:maxLength="8"
                android:textSize="14sp"
                android:inputType="number"
                android:hint="@string/isi_nim"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etClass"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="14sp"
                android:inputType="text"
                android:hint="@string/isi_kelas"
                tools:ignore="Autofill" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontak"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="14sp"
            android:maxLength="15"
            android:inputType="phone"
            android:hint="@string/isi_no_telp"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:hint="@string/isi_email"
            tools:ignore="Autofill" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>

        <EditText
            android:id="@+id/etIG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="Isi Akun Instagram"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/btnTambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_background"
            android:textColor="@color/colorAccent"
            android:text="Tambah"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>

    </LinearLayout>

</ScrollView>