<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="fragment.FragmentProfil">

    <LinearLayout
        android:id="@+id/tabInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_info_black_24dp" />
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="App Version"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textStyle="bold"/>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1.5.0"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20dp"/>
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:gravity="center"
            android:text="UNIKOM - IF8"
            android:layout_margin="10dp"
            android:textColor="#000"
            android:textStyle="bold"/>
    
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo2"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:background="@drawable/item_background"
            android:text="@string/sign_out"
            android:onClick="SignOut"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:src="@drawable/foto"
            app:civ_border_color="#000"
            app:civ_circle_background_color="@color/colorPrimary"
            app:civ_fill_color="@color/colorPrimary"
            app:civ_border_width="2dp"
            android:layout_gravity="center"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nim"
            android:textColor="#000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/nama"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kelas"
            android:textColor="#000"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>