<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.FragmentProfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgFoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:src="@drawable/foto"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="3dp" />

        <TextView
            android:id="@+id/tvMyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/imgFoto"
            android:text="@string/nama"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMyName"
            android:layout_toEndOf="@id/imgFoto"
            android:text="@string/nim"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgFoto"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_background">

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorAccent"
                    android:text="Nomor Telepon" />

                <TextView
                    android:id="@+id/tvMyPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noTelp"
                    android:layout_marginLeft="16dp"
                    android:layout_below="@id/tvPhone"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorAccent"
                    android:text="Email" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_below="@id/tvEmail"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layIg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <TextView
                    android:id="@+id/tvIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorAccent"
                    android:text="Instagram" />

                <TextView
                    android:id="@+id/tvMyIg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/akunIG"
                    android:layout_below="@id/tvIg"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layTwitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/item_background">

                <TextView
                    android:id="@+id/tvTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@color/colorAccent"
                    android:text="Twitter" />

                <TextView
                    android:id="@+id/tvMyTwitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/akunTwitter"
                    android:layout_below="@id/tvTwitter"
                    android:layout_marginLeft="16dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>